--- a/res/layout/activity_splash_screen.xml
+++ b/res/layout/activity_splash_screen.xml
@@ -4,9 +4,11 @@
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <TextView
+    <ImageView
+        android:id="@+id/SplashScreenLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_jgf_splash_screen_icon" />
 
 </RelativeLayout>
