libgdx works with native android activitiesgit add .git add .git add .git add .!

--- a/res/layout/activity_splash_screen.xml
+++ b/res/layout/activity_splash_screen.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context="${relativePackage}.${activityClass}" >
 
     <ImageView
@@ -9,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_jgf_splash_screen_icon" />
 
 </RelativeLayout>
